--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,15 +2,911 @@ html,
 body {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+/* NAVBAR */
+/* Dropdown Button */
+.dropbtn {
+  background-color: transparent;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #ddd;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+
+#wrapper {
+  padding-left: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#wrapper.toggled {
+  padding-left: 250px;
+}
+
+#sidebar-wrapper {
+  z-index: 1000;
+  position: fixed;
+  left: 250px;
+  width: 0;
+  height: 100%;
+  margin-left: -250px;
+  overflow-y: auto;
+  /* background: #000; */
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  transition: all 0.5s ease;
+}
+
+#wrapper.toggled #sidebar-wrapper {
+  width: 250px;
+}
+
+#page-content-wrapper {
+  width: 100%;
+  position: absolute;
+  padding: 15px;
+}
+
+#wrapper.toggled #page-content-wrapper {
+  position: absolute;
+  margin-right: -250px;
+}
+
+.fixed-brand {
+  width: auto;
+}
+/* Sidebar Styles */
+
+.sidebar-nav {
+  position: relative;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-top: 2px;
+}
+.sidebar-nav1 {
+  position: relative;
+  top: 0;
+  width: 250px;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-top: 2px;
+}
+
+.sidebar-nav li {
+  text-indent: 15px;
+  line-height: 40px;
+  padding: 25px 0px 0px 25px;
+}
+
+.sidebar-nav li a {
+  display: block;
+  text-decoration: none;
+  color: black;
+}
+
+.sidebar-nav li a:hover {
+  text-decoration: none;
+  color: black;
+  background: rgba(255, 255, 255, 0.2);
+  border-left: red 2px solid;
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  font-size: 18px;
+  line-height: 60px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+  color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+
+.no-margin {
+  margin: 0;
+}
+
+@media(min-width:768px) {
+  #wrapper {
+    padding-left: 250px;
+  }
+  .fixed-brand {
+    width: 250px;
+  }
+  #wrapper.toggled {
+    padding-left: 0;
+  }
+  #sidebar-wrapper {
+    width: 250px;
+  }
+  #wrapper.toggled #sidebar-wrapper {
+    width: 250px;
+  }
+  #wrapper.toggled-2 #sidebar-wrapper {
+    width: 150px;
+  }
+  #wrapper.toggled-2 #sidebar-wrapper:hover {
+    width: 250px;
+  }
+  #page-content-wrapper {
+    padding: 20px;
+    position: relative;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+  #wrapper.toggled #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+    padding-left: 250px;
+  }
+  #wrapper.toggled-2 #page-content-wrapper {
+    position: relative;
+    margin-right: 0;
+    margin-left: -200px;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
+  }
+}
+
 a {
-  color: inherit;
   text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+}
+
+.flidel_logo_margin {
+  margin: 30px;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: #202020;
+}
+
+.nav-item {
+  padding: 20px;
+  font-size: 12px;
+  font-weight: 500;
+}
+
+
+.navbar_logo {
+  background-color: #ffffff;
+  padding: 16px 60px;
+  font-size: 14px;
+  color: #202020;
+  font-weight: 500;
+}
+
+.label {
+  font-weight: 500;
+  margin-bottom: 10px;
+  font-size: 12px;
+  color: #999999;
+}
+
+.direction0 {
+  float: left;
+  width: 50%;
+  background-color: #6130D2;
+  height: 200vh;
+}
+.direction01 {
+  float: left;
+  width: 50%;
+  background-color: #345cf6;
+  height: 200vh;
+}
+
+.direction {
+  float: right;
+  width: 50%;
+  background-color: #ffffff;
+  padding: 60px;
+}
+
+.sub_direction {
+  background-color: #ffffff;
+  margin-top: 50px;
+  padding: 20px 40px;
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 20px;
+  border: 2px solid #ebebeb;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+input[type=email] {
+  width: 100%;
+  padding: 20px;
+  border: 2px solid #ebebeb;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+
+
+input[type=password] {
+  width: 100%;
+  padding: 20px;
+  border: 2px solid #ebebeb;
+  background-color: #f5f5f5;
+  border-radius: 10px;
+}
+.block {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #A4A4A4;
+  padding: 14px 28px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 500;
+}
+
+.blocklogin {
+  display: block;
+  color: #fff;
+  width: 100%;
+  border: none;
+  background-color: #ec6237;
+  padding: 14px 28px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 500;
+  border-radius: 10px;
+}
+.blocksign {
+  display: block;
+  color: #fff;
+  width: 100%;
+  border: none;
+  background-color: #345cf6;
+  padding: 14px 28px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  font-weight: 500;
+  border-radius: 10px;
+}
+.loginlink{
+  text-decoration: none;
+  color: red;
+}
+
+.bluelink{
+  text-decoration: none;
+  color: #335aff;
+}
+.or {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  text-align: center;
+  color: #202020;
+  font-weight: 500;
+}
+
+.block1 {
+  display: block;
+  width: 100%;
+  border: none;
+  background-color: #fff;
+  border: 1px solid #ebebeb;
+  padding: 14px 28px;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  text-align: center;
+}
+
+.block2 {
+  display: block;
+  width: 100%;
+  color: #fff;
+  border: none;
+  background-color: #335aff;
+  border: 1px solid #ebebeb;
+  padding: 14px 28px;
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.google_login {
+  margin-bottom: 10px;
+}
+
+.registerd {
+  text-align: center;
+  margin-top: 50px;
+  font-size: 14px;
+  color: #202020;
+  font-weight: 500;
+}
+
+label {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+.forgot_password {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.justify {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+/* ----------------------------------------------Dashboard------------------------- */
+
+.row1 {
+  /* background-color: #E2e2e2; */
+  padding: 10px;
+  margin-top: 20px;
+}
+.cards_horizontal{
+  font-size: 10px;
+  font-weight: 500;
+  color: #202020;
+}
+.square_image{
+  width: 70px;
+  height: 70px;
+  background-color: #c4c4c4;
+}
+.justify {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content_one {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.row1 {
+  /* background-color: #e2e2e2; */
+}
+
+.ads {
+  float: center;
+  width: 100%;
+  text-align: center;
+}
+
+.container1 {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background: #ffffff;
+}
+
+.create_campaign {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.center {
+  text-align: center;
+}
+
+label {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+.ad_platform {
+  margin-top: 20px;
+}
+
+.ad_text {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.ads {
+  width: 100%;
+  height: 200px;
+  background-color: #ebebeb;
+}
+
+.main {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 5px;
+  float: right;
+}
+.next{
+  padding: 10px 40px;
+  background-color: #c4c4c4;
+  font-size: 12px;
+  text-decoration: none;
+  color: #202020;
+  font-weight: 500;
+}
+.row1 {
+  /* background-color: #e2e2e2; */
+}
+
+.ads {
+  float: center;
+  width: 100%;
+  text-align: center;
+}
+
+.container1 {
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px;
+  background: #ffffff;
+}
+
+.create_campaign {
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.center {
+  text-align: center;
+}
+
+label {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+input[type="text"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+input[type="email"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+.ad_platform {
+  margin-top: 20px;
+}
+
+.ad_text {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.ads {
+  width: 100%;
+  height: 200px;
+  background-color: #ebebeb;
+}
+
+.main {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 5px;
+}
+
+.main1 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+  float: right;
+}
+
+.next {
+  padding: 10px 40px;
+  background-color: #c4c4c4;
+  font-size: 12px;
+  text-decoration: none;
+  color: #202020;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.next1 {
+  padding: 10px 40px;
+  background-color: #f3f3f3;
+  font-size: 12px;
+  text-decoration: none;
+  color: #202020;
+  font-weight: 500;
+  margin-right: 10px;
+}
+
+.map_div {
+  width: 100%;
+  height: 200px;
+  background-color: #c4c4c4;
+}
+
+.age_limit {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.age_divs {
+  margin-right: 20px;
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 10px;
+  margin-bottom: 10px;
+
+}
+
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #a4a4a4;
+  background-color: #ffffff;
+}
+
+.gender {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.another {
+  background-color: #e5e5e5 !important;
+  border: none !important;
+  color: #202020 !important;
+}
+
+.keyword_div {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.keyword {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.dynamic {
+  width: 100%;
+  border: 1px solid #a4a4a4;
+  height: 40px;
+  margin-bottom: 100px;
+}
+
+.keyword_dynamic {
+  background-color: #c4c4c4;
+  padding: 3px 20px;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-radius: 10px;
+  font-size: 14px;
+  font-weight: 500;
+
+}
+
+.background {
+  padding-bottom: 50px;
+}
+
+.text-center{
+  text-align: center;
+}
+
+.container2 {
+  width: 100%;
+  margin: 0 auto;
+  padding: 20px;
+  background: #ffffff;
+}
+.google_div{
+  font-size: 12px;
+  font-weight: 500;
+  padding: 15px 40px;
+  background-color: #ebebeb;
+  text-decoration: none;
+  color: #202020;
+}
+.facebook_div{
+  font-size: 12px;
+  font-weight: 500;
+  padding: 15px 40px;
+  background-color: #fefefe;
+  text-decoration: none;
+  color: #202020;
+}
+.main {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+.main0 {
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: 5px;
+}
+.add_studio{
+  font-size: 12px;
+  font-weight: 500;
+  padding: 15px 40px;
+  background-color: #fefefe;
+  text-decoration: none;
+  color: #202020;
+  border:  1px solid #c4c4c4;
+
+}
+.preview{
+  width: 100%;
+  background-color: #ebebeb;
+  height: 65vh;
+  position: relative;
+}
+.modify_headlines{
+  border: 1px solid #c4c4c4;
+  text-decoration: none;
+  color: #202020;
+  padding: 10px 20px;
+  position: relative;
+  top: 35px;
+  left: 150px;
+
+
+}
+.payment{
+  font-size: 14px;
+  font-weight: 700;
+}
+.payment_div{
+  height: 500px;
+  width: 100%;
+  background-color: #ebebeb;
+}
+.borde {
+  padding: 15px;
+  border: 2px solid #c4c4c4;
+}
+
+.card_image {
+  width: 100%;
+  height: 300px;
+  background-color: #c4c4c4;
+}
+
+.ad_title {
+  font-size: 12px;
+  font-weight: 500;
+}
+.attendance{
+  margin-top: 50px;
+  margin-bottom: 30px;
+
+}
+.audience{
+  font-size: 14px;
+  font-weight: 500;
+  color: #202020;
+
+}
+.main2 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 5px;
+}
+
+#myInput {
+  background-image: url('/css/searchicon.png');
+  /* Add a search icon to input */
+  background-position: 10px 12px;
+  /* Position the search icon */
+  background-repeat: no-repeat;
+  /* Do not repeat the icon image */
+  width: 100%;
+  /* Full-width */
+  font-size: 16px;
+  /* Increase font-size */
+  padding: 12px 20px 12px 40px;
+  /* Add some padding */
+  border: 1px solid #ddd;
+  /* Add a grey border */
+  margin-bottom: 12px;
+  /* Add some space below the input */
+}
+
+#myTable {
+  border-collapse: collapse;
+  /* Collapse borders */
+  width: 100%;
+  /* Full-width */
+  border: 1px solid #ddd;
+  /* Add a grey border */
+  font-size: 18px;
+  /* Increase font-size */
+}
+
+#myTable th,
+#myTable td {
+  text-align: left;
+  /* Left-align text */
+  padding: 12px;
+  /* Add padding */
+}
+
+#myTable tr {
+  /* Add a bottom border to all table rows */
+  border-bottom: 1px solid #ddd;
+}
+
+#myTable tr.header,
+#myTable tr:hover {
+  /* Add a grey background color to the table header and on hover */
+  background-color: #f1f1f1;
+}
+
+.signin{
+  font-size: 24px;
+  color: #202020;
+  font-weight: bold;
+
+}
+.nav-button{
+  border: 1px solid blue;
+  color: blue;
+}
+.sub-nav-button-view{
+  border: 1px solid white;
+  color: white;
+  background-color: coral;
+  border-radius: 10px;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 10px;
+}
+
+
+.sub-nav-button-details{
+  border: 1px solid coral;
+  color: white;
+  float: right;
+  color: coral;
+  border-radius: 10px;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 20px 10px 20px;
+}
+.sub-nav-imgs {
+float: right;
+margin: 15px 30px;
+}
+.searchform {
+  height: 48px;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  overflow: hidden;
+  border-radius: 5px;
+}
+.searchform .search {
+  width: 46px;
+  height: 46px;
+}
+.sub-nav-search{
+  float: right;
+  margin: 5px 20px;
+
+}
+
+@media (min-width: 992px){
+  .order-lg-last {
+      -webkit-box-ordinal-group: 14;
+      -ms-flex-order: 13;
+      order: 13;
+  }
+
+}
+
+.details-box1{
+  border: 1px solid #EC6237;
+  padding: 60px 0px 60px 0px;
+  border-radius: 10px;
+}
+.details-box2{
+  border: 1px solid #345CF6;
+  padding: 60px 0px 60px 0px;
+  border-radius: 10px;
+}
+.details-box3{
+  border: 1px solid #0FA958;
+  padding: 60px 0px 60px 0px;
+  border-radius: 10px;
+}
+.details-boxs{
+  justify-content: space-around;
 }
